# personal-finance-assistant

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  agent.py  app.py  database.py  models.py  pyproject.toml  requirements.txt  run.py  run_clerk.py  run_director.py  setup_supabase.sql  start.sh  start_ui.sh  streamlit_app.py  test_agent_e2e.py  wrangler.toml
.streamlit/: config.toml
agents/: data_engineer.py  finance.py  strategy.py
application/dtos/: financial_report.py  strategy_response.py
config/: settings.py
core/: container.py  dependencies.py  interfaces.py  models.py  observability.py  settings.py
data/: base.py  database.py  gsheet.py  setup.sql
finance/: budget.py  cashflow.py  ledger.py  risk.py
finance/models/: enums.py  finance_goal.py  reports.py  transaction.py
finance/repositories/: transaction_repository.py
finance/services/: advisor.py  categories.py  ledger.py
finance/utils/: seeder.py
prompts/: persona.py
services/: advisor.py  categories.py  ledger.py
tests/: check_structure_final.py  e2e_test.py  evaluate_agents.py  strategy_test.py
